:racehorse: speed up font loading

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -4,7 +4,7 @@
 @import 'libs/vendor';
 @import 'libs/breakpoints';
 @import url('https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
+@import url('https://fonts.loli.net/css?family=Source+Sans+Pro:300');
 
 /*
 	Identity by HTML5 UP
